# game

./: CMakeLists.txt  Makefile  main.cpp
glad/include/glad/: gl.h
glad/src/: gl.c
src/: game.cpp  game.h  graphics.cpp  graphics.h  input.cpp  input.h  platform.h  sound.h  utils.cpp  utils.h
src/linux/: main.cpp  platform.cpp  pulseaudio.cpp  pulseaudio.h  xcb.cpp  xcb.h
src/mac/: AppDelegate.h  AppDelegate.mm  GameView.h  GameView.mm  GameViewController.h  GameViewController.mm  main.mm
